src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    @font-face {
        font-family: "zzz";
        font-stretch: 90%;
        white-space: nowrap;
        src:
            local("Mont Heavy"),
            url(./fonts/ZZZ_FR.ttf) format("truetype");
    }

    @font-face {
        font-family: "paybooc";
        font-weight: 400;
        white-space: nowrap;
        font-weight: bold;
        text-shadow: 2px 2px 6px #000000;
        src: url(./fonts/paybooc-Bold.woff);
    }

    :root {
        font-family:
            "paybooc", Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
        line-height: 1.5;
        font-weight: 400;

        color-scheme: light dark;
        color: rgba(255, 255, 255, 0.85);
        background-color: #242424;
        scrollbar-width: none;

        font-synthesis: none;
        text-rendering: optimizeLegibility;
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;

        --color-cinema-yellow: #fff000;
        --color-cinema-gray: #b1b1b1;
    }
}

@layer components {
    h1 {
        @apply text-4xl leading-none drop-shadow-primary capitalize;
    }

    .card-primary {
        @apply relative overflow-hidden border border-solid rounded-xl border-stone-600/70 bg-stone-800/60 transition-all duration-500 hover:border-stone-600/15 shadow-xl p-7;
    }

    .div-input-calc {
        @apply relative flex m-3 bg-stone-950 rounded-lg border-2 border-stone-700 h-fit hover:border-stone-900 transition duration-300;
    }

    .green-box {
        @apply text-black/0 h-[21px] relative shadow-md rounded-md bg-lime-500/60 pointer-events-none;
    }

    .divider-base {
        @apply flex box-border clear-both opacity-15;
    }

    .divider-disc {
        @apply border-[0.75px] border-solid divide-solid my-[10px] mx-auto;
    }

    .divider-text {
        @apply border border-dashed grow my-auto mx-[10px];
    }

    .button-base {
        @apply text-sm text-gray-900 border border-stone-300 rounded-md cursor-pointer bg-gray-50 dark:text-stone-400 focus:outline-none dark:bg-stone-700 dark:border-stone-600 dark:placeholder-gray-400 text-[16px] opacity-90;
    }

    .text-border {
        -webkit-text-stroke-width: 6px;
        -webkit-text-stroke-color: #000000cc;
        paint-order: stroke fill;
    }
    .side-menu-button {
        @apply hover:bg-stone-700 focus:bg-stone-800 w-full p-1 rounded-sm;
    }

    .side-menu-content {
        @apply flex bg-stone-900 items-start text-[17px] transition-all duration-500 overflow-hidden z-40;
    }

    .hover-stats {
        @apply bg-stone-600 rounded-xl border-stone-700 transition-all duration-500 hover:border-opacity-15 hover:border-stone-600 bg-opacity-60 shadow-xl;
    }
}

@layer utilities {
    .scrollbar::-webkit-scrollbar {
        width: 6px;
        height: 6px;
    }

    .scrollbar::-webkit-scrollbar-track {
        border-radius: 100vh;
        background: #101010;
    }

    .scrollbar::-webkit-scrollbar-thumb {
        background: #78716c;
        border-radius: 100vh;
        border: 1px solid #1c1917;
    }

    .scrollbar::-webkit-scrollbar-thumb:hover {
        background: #44403c;
    }
}

